added entry for update

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+=== Version 0.3
+* Enhancements
+  * Updated so yml file can now include erb (thanks Justin Rolston)
+
 === Version 0.2 / 2012-6-9
 * Fixes
   * Fixed issue with getting default directory
