--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+=== Version 0.5
+* Fixes
+  * Added require for ERB to resolve issues when not in bundle (thanks Doug Morgan)
+
 === Version 0.4 / 2014-9-21
 * Fixes
   * require yaml so it works with latest ruby
